Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22763

BF aborting stored procedure execution in 10.1 causes hang

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1(EOL), 10.2(EOL), 10.3(EOL)
    • 10.1.46, 10.2.33, 10.3.24
    • Galera
    • None

    Description

      It appears that fix for bug MDEV-20225 was fixed only in 10.4 version. The related test did not show problems with 10.3 and 10.2, at least. It may be that 10.1 was not tested at the time of MDEV-20225 preparation. However, running the related mtr test galera.galera_sp_bf_abort in current 10.1 HEAD revision, causes assert failure.
      The conclusion is that MDEV-20225 should be backported to 10.1 and 10.2 and 10.3 should be retested to verify if there is some later work in earlier versions, which makes SP handling vulnerable.

      Attachments

        Activity

          seppo Seppo Jaakola added a comment - PR: https://github.com/MariaDB/server/pull/1574

          sysprg merged this to 10.2 and I merged to 10.3.

          marko Marko Mäkelä added a comment - sysprg merged this to 10.2 and I merged to 10.3.

          People

            seppo Seppo Jaakola
            seppo Seppo Jaakola
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.